Changed theme to Red and Yellow
See CHANGELOG for details

--- a/firefox-config/index.html
+++ b/firefox-config/index.html
@@ -9,28 +9,28 @@
             }
 
             body {
-                background-color: #0E1011;
-                color: #FF9900;
+                background-color: #0F1013;
+                color: #FFFF5F;
                 font: "Inconsolata";
                 text-align: center;
             }
 
             h1 {
                 font: "Inconsolata";
-                color: white;
+                color: #FFFF5F;
                 text-align: center;
             }
 
             a {
                 text-decoration: none;
-                color: #FF9900;
+                color: #FFFF5F;
                 -webkit-transition: font-size 0.25s, color 0.25s;
                 transition: font-size 0.25s, color 0.25;
             }
 
             a:hover {
                 font-size: 25px;
-                color: #FF0031;
+                color: #FF005E;
             }
 
             img {
@@ -38,7 +38,7 @@
                 height: 105px;
                 padding: 15px;
                 margin-bottom: 15px;
-                border: 2px solid #FAFAFA;
+                border: 2px solid #FFFF5F;
                 border-radius: 5px;
             }
 
@@ -63,12 +63,12 @@
                 margin: 15px 0;
                 font-family: Inconsolata;
                 color: #FAFAFA;
-                background-color: #0E1011;
+                background-color: #0F1013;
                 background-image: url("searchicon.png");
                 background-position: 3px 3px;
                 background-repeat: no-repeat;
                 border-radius: 5px;
-                border: 2px solid #FF9900;
+                border: 2px solid #FFFF5F;
                 box-sizing: border-box;
                 -webkit-transition: width 0.5s, border-color 0.5s;
                 transition: width 0.5s, border-color 0.5s;
@@ -76,7 +76,7 @@
 
             input[type=text]:hover, input[type=text]:focus {
                 width: 500px;
-                border-color: #FF0031;
+                border-color: #FF005E;
             }
 
         </style>
