Adding stuff for Winter theme
See CHANGELOG for recent changes

--- a/firefox-config/index.html
+++ b/firefox-config/index.html
@@ -9,7 +9,7 @@
                 window.location.href = url;
             }
         </script>
-        <link rel="icon" href="icon.jpg" type="image/icon">
+        <link rel="icon" href="favicon.png" type="image/icon">
     </head>
     <body>
         <h1 id="title">Homepage</h1>
@@ -21,38 +21,20 @@
         <form action="javascript: submit();">
             <input id="search_field" type="text" name="search_term" placeholder="Search . . .">
         </form>
-        <div class="group">
-            <h3 class="group-title">Placeholder</h3>
-            <p>Placeholder Placeholder</p>
-            <button class="group-button" onclick="goToAddress('https://www.google.com');">Go</button>
+        <div class="row">
+            <button class="group-button" onclick="goToAddress('https://www.google.com');">Placeholder</button>
+            <button class="group-button" onclick="goToAddress('https://www.google.com');">Placeholder</button>
+            <button class="group-button" onclick="goToAddress('https://www.google.com');">Placeholder</button>
         </div>
-        <div class="group">
-            <h3 class="group-title">Placeholder</h3>
-            <p>Placeholder Placeholder</p>
-            <button class="group-button" onclick="goToAddress('https://www.google.com');">Go</button>
+        <div class="row">
+            <button class="group-button" onclick="goToAddress('https://www.archlinux.org/packages');">Arch Linux Packages</button>
+            <button class="group-button" onclick="goToAddress('https://wiki.archlinux.org');">Arch Linux Wiki</button>
+            <button class="group-button" onclick="goToAddress('https://aur.archlinux.org');">Arch User Repository</button>
         </div>
-        <div class="group">
-            <h3 class="group-title">Placeholder</h3>
-            <p>Placeholder Placeholder</p>
-            <button class="group-button" onclick="goToAddress('https://www.google.com');">Go</button>
+        <div class="row">
+            <button class="group-button" onclick="goToAddress('https://www.reddit.com/r/unixporn');">r/unixporn</button>
+            <button class="group-button" onclick="goToAddress('https://www.reddit.com/r/linux');">r/linux</button>
+            <button class="group-button" onclick="goToAddress('https://www.reddit.com/r/linuxcirclejerk');">r/linuxcirclejerk</button>
         </div>
-        <table>
-            <tr>
-                <td><a href="https://www.reddit.com/r/unixporn">r/unixporn</a></td>
-                <td><a href="https://wiki.archlinux.org">Arch Linux Wiki</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://www.reddit.com/r/linuxcirclejerk">r/linuxcirclejerk</a></td>
-                <td><a href="https://aur.archlinux.org">AUR</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://www.reddit.com/r/linux">r/linux</a></td>
-                <td><a href="https://www.archlinux.org/packages">Arch Linux Packages</a></td>
-            </tr>
-            <tr>
-                <td><a href="https://www.stackoverflow.com">Stack Overflow</a></td>
-                <td><a href="https://www.youtube.com">YouTube</a></td>
-            </tr>
-        </table>
     </body>
 </html>
