Change to Dark theme
See CHANGELOG for more information

--- a/firefox-config/index.html
+++ b/firefox-config/index.html
@@ -22,19 +22,24 @@
             <input id="search_field" type="text" name="search_term" placeholder="Search . . .">
         </form>
         <div class="row">
-            <button class="group-button" onclick="goToAddress('https://www.google.com');">Placeholder</button>
-            <button class="group-button" onclick="goToAddress('https://www.google.com');">Placeholder</button>
-            <button class="group-button" onclick="goToAddress('https://www.google.com');">Placeholder</button>
+            <button onclick="goToAddress('https://www.google.com');">Placeholder</button>
+            <button onclick="goToAddress('https://www.google.com');">Placeholder</button>
+            <button onclick="goToAddress('https://www.google.com');">Placeholder</button>
         </div>
         <div class="row">
-            <button class="group-button" onclick="goToAddress('https://www.archlinux.org/packages');">Arch Linux Packages</button>
-            <button class="group-button" onclick="goToAddress('https://wiki.archlinux.org');">Arch Linux Wiki</button>
-            <button class="group-button" onclick="goToAddress('https://aur.archlinux.org');">Arch User Repository</button>
+            <button onclick="goToAddress('https://www.archlinux.org/packages');">Arch Linux Packages</button>
+            <button onclick="goToAddress('https://wiki.archlinux.org');">Arch Linux Wiki</button>
+            <button onclick="goToAddress('https://aur.archlinux.org');">Arch User Repository</button>
         </div>
         <div class="row">
-            <button class="group-button" onclick="goToAddress('https://www.reddit.com/r/unixporn');">r/unixporn</button>
-            <button class="group-button" onclick="goToAddress('https://www.reddit.com/r/linux');">r/linux</button>
-            <button class="group-button" onclick="goToAddress('https://www.reddit.com/r/linuxcirclejerk');">r/linuxcirclejerk</button>
+            <button onclick="goToAddress('https://www.stackoverflow.com');">Stack Overflow</button>
+            <button onclick="goToAddress('https://www.github.com');">GitHub</button>
+            <button onclick="goToAddress('https://www.youtube.com');">YouTube</button>
+        </div>
+        <div class="row">
+            <button onclick="goToAddress('https://www.reddit.com/r/unixporn');">r/unixporn</button>
+            <button onclick="goToAddress('https://www.reddit.com/r/linux');">r/linux</button>
+            <button onclick="goToAddress('https://www.reddit.com/r/linuxcirclejerk');">r/linuxcirclejerk</button>
         </div>
     </body>
 </html>
