Update Firefox homepage

--- a/firefox-config/index.html
+++ b/firefox-config/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="stylesheet.css">
         <link rel="icon" href="favicon.png" type="image/icon">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <div id="main-container">
@@ -14,15 +15,14 @@
                 }
             </script>
             <div id="content-container">
-
                 <form action="javascript: submit();">
-                    <input id="search" type="text" placeholder="Search . . .">
+                    <input id="search" type="text" placeholder="Search . . ." autofocus>
                 </form>
                 <div id="column-container">
                     <ul>
                         <li>School</li>
                         <li><a href="https://www.google.com">Placeholder</a></li>
-                        <li><a href="https://portal.mypearson.com/login">My MathLab</a></li>
+                        <li><a href="https://www.google.com">Placeholder</a></li>
                         <li><a href="https://www.google.com">Placeholder</a></li>
                     </ul>
                     <ul>
